chore: updated promotion
fixed draft tags being shown

--- a/content/blog/i-cant-belive-udemy-published-my-ionic-video-course/i-cant-belive-udemy-published-my-ionic-video-course.mdx
+++ b/content/blog/i-cant-belive-udemy-published-my-ionic-video-course/i-cant-belive-udemy-published-my-ionic-video-course.mdx
@@ -13,7 +13,7 @@ tags:
   - packt
 ---
 
-> 📢 The course [Hands-On App Development with Ionic](https://www.udemy.com/course/hands-on-app-development-with-ionic/) on [Udemy](https://www.udemy.com/course/hands-on-app-development-with-ionic/) is on a **89%** sale right now at **€12.99** 💰💰. And if you hurry, I have **TEN LIMITED DISCOUNT COUPONS** for the first 10 folks who reach out to any of my socials for them.
+<IonicCourse />
 
 Being a Software Engineer is challenging. Not because it is hard. But because of the fact that you have to be updated with the latest trends and changes happening in the industry. Now you could be aware of these by subscribing to tech newsletters, following influencers on Twitter, etc. Ultimately, you'd have to go and learn about the changes through some articles, videos, or even by reading books. For me, [Udemy](https://udemy.com) has been one of the sources of learning and keeping myself up to date with brilliant content from the amazing authors out there.
 
@@ -34,7 +34,7 @@ I mean I could keep going on talking about the magnitude of issues I faced durin
 
 Anyways I finally bought some [Acoustic Foams from ArrowZoom](https://arrowzoom.com/collections/acoustic-foam) which fixed the reverb during the recordings. And I also bought the [M-Track 2x2 Vocal Studio Pro](https://m-audio.com/m-track2x2vsp) that I used initially for recording the course.
 
-<img title="throw table gif" width="500" alt="failure gif" src="/i-cant-belive-udemy-published-my-ionic-video-course/initial-setup.jpg" />
+<img title="initial setup image" width="500" alt="failure gif" src="/i-cant-belive-udemy-published-my-ionic-video-course/initial-setup.jpg" />
 
 ## Why you should learn Ionic in 2021
 There's no doubt that there are number of ways to build mobile apps and PWAs today. However, it might require specialized skillset depending on the way you choose to build your apps. Here are a few reasons / use cases where you would want to use IONIC for building your applications:
