--- a/content/blog/the-most-easy-way-to-add-update-and-delete-contacts-in-flutter/the-most-easy-way-to-add-update-and-delete-contacts-in-flutter.mdx
+++ b/content/blog/the-most-easy-way-to-add-update-and-delete-contacts-in-flutter/the-most-easy-way-to-add-update-and-delete-contacts-in-flutter.mdx
@@ -290,7 +290,7 @@ of the `ContactDetails` page as follows:
 Let's implement what happens if we press the `Edit` action. We want to be able to open an existing contact for editing. And when we have edited the contact, we need to reflect it on the `ContactDetails` page as well.
 For this, we'll create a method called `onAction` in our `ContactDetails` widget and pass it to the  Modify the `contact-details.dart` as follows:
 
-```dart{3,51,12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31}
+```dart{3,12-35,54}
 import 'package:contacts_app/app-contact.class.dart';
 import 'package:contacts_app/components/contact-avatar.dart';
 import 'package:contacts_service/contacts_service.dart';
@@ -508,7 +508,7 @@ using the `AlertDialog` widget.
 
 Go to the `contact-details.dart` and create a new method named `showDeleteConfirmation()`. Your code should look as follows:
 
-```dart{10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 47}
+```dart{10-38,47}
 ...
 class _ContactDetailsState extends State<ContactDetails> {
   @override
