refactor(flutter-stripe-connect): add video link

--- a/content/blog/flutter-marketplace-app-with-stripe-connect-part-1/flutter-marketplace-app-with-stripe-connect-part-1.mdx
+++ b/content/blog/flutter-marketplace-app-with-stripe-connect-part-1/flutter-marketplace-app-with-stripe-connect-part-1.mdx
@@ -119,6 +119,22 @@ the **Save** button.
   backgroundColor="transparent"
 />
 
+## Watch video instead?
+
+<PromotionBanner title="Would rather see a video tutorial? I got you covered 👌<br/>Watch it below 👇"></PromotionBanner>
+<div>
+  <iframe
+    width="560"
+    height="315"
+    src="https://www.youtube.com/embed/R2Okg53lUv8"
+    title="YouTube video player"
+    frameborder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+    allowfullscreen
+  ></iframe>
+  <hr />
+</div>
+
 ## Running the Stripe Backend server locally
 
 Make sure you have [NodeJS](https://nodejs.org/en/) and
