feat(embedded-yt-videos): create a component for yt iframes

--- a/content/blog/the-most-easy-way-to-add-update-and-delete-contacts-in-flutter/the-most-easy-way-to-add-update-and-delete-contacts-in-flutter.mdx
+++ b/content/blog/the-most-easy-way-to-add-update-and-delete-contacts-in-flutter/the-most-easy-way-to-add-update-and-delete-contacts-in-flutter.mdx
@@ -61,14 +61,7 @@ For this example, I'm going to use Android.
 run the app on your simulator based on your IDE/environment.
 
 <PromotionBanner title="Would rather see a video tutorial? I got you covered 👌<br/>Watch it below 👇"></PromotionBanner>
-<iframe
-  width="560"
-  height="315"
-  src="https://www.youtube.com/embed/qC90U1rdgHQ"
-  frameborder="0"
-  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-  allowfullscreen
-></iframe>
+<EmbeddedYouTubeVideo src="https://www.youtube.com/embed/qC90U1rdgHQ" />
 <hr />
 
 ## Adding a Contact
