--- a/content/blog/flutter-marketplace-app-with-stripe-connect-part-1/flutter-marketplace-app-with-stripe-connect-part-1.mdx
+++ b/content/blog/flutter-marketplace-app-with-stripe-connect-part-1/flutter-marketplace-app-with-stripe-connect-part-1.mdx
@@ -118,22 +118,9 @@ the **Save** button.
   caption="Figure 1.6"
   backgroundColor="transparent"
 />
-
-## Watch video instead?
-
 <PromotionBanner title="Would rather see a video tutorial? I got you covered 👌<br/>Watch it below 👇"></PromotionBanner>
-<div>
-  <iframe
-    width="560"
-    height="315"
-    src="https://www.youtube.com/embed/R2Okg53lUv8"
-    title="YouTube video player"
-    frameborder="0"
-    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-    allowfullscreen
-  ></iframe>
-  <hr />
-</div>
+<EmbeddedYouTubeVideo src="https://www.youtube.com/embed/R2Okg53lUv8" />
+<hr />
 
 ## Running the Stripe Backend server locally
 
