fix(video-previews): fixed existing video previews

--- a/content/blog/flutter-marketplace-app-with-stripe-connect-part-2/flutter-marketplace-app-with-stripe-connect-part-2.mdx
+++ b/content/blog/flutter-marketplace-app-with-stripe-connect-part-2/flutter-marketplace-app-with-stripe-connect-part-2.mdx
@@ -39,6 +39,9 @@ tags:
     </li>
   </ol>
 </header>
+<PromotionBanner title="Would rather see a video tutorial? I got you covered 👌<br/>Watch it below 👇"></PromotionBanner>
+<EmbeddedYouTubeVideo src="https://www.youtube.com/embed/wj5ieFnm0e4" />
+<hr />
 
 ## Getting Started
 
