--- a/content/blog/the-most-easy-way-to-add-update-and-delete-contacts-in-flutter/the-most-easy-way-to-add-update-and-delete-contacts-in-flutter.mdx
+++ b/content/blog/the-most-easy-way-to-add-update-and-delete-contacts-in-flutter/the-most-easy-way-to-add-update-and-delete-contacts-in-flutter.mdx
@@ -12,7 +12,6 @@ tags:
   - mobile development
 ---
 
-<IonicCourse />
 <header>
   In this article, you'll learn the most easiest ways to implement Adding,
   Updating and Deleting contacts in a Flutter app. And we'll do it using the{" "}
@@ -25,6 +24,11 @@ tags:
   </a>{" "}
   Flutter package. So hold your horses, and hang tight!
 </header>
+<div style="margin-top: 30px;">
+  <PromotionBanner title="Would rather see a video tutorial? I got you covered 👌<br/>Watch it below 👇"></PromotionBanner>
+  <EmbeddedYouTubeVideo src="https://www.youtube.com/embed/qC90U1rdgHQ" />
+</div>
+<hr />
 
 ## Prerequisites
 
@@ -59,10 +63,6 @@ Great! Open the project in your favorite editor now. I mainly use
 For this example, I'm going to use Android.
 [Follow the instructions](https://flutter.dev/docs/get-started/test-drive) to
 run the app on your simulator based on your IDE/environment.
-
-<PromotionBanner title="Would rather see a video tutorial? I got you covered 👌<br/>Watch it below 👇"></PromotionBanner>
-<EmbeddedYouTubeVideo src="https://www.youtube.com/embed/qC90U1rdgHQ" />
-<hr />
 
 ## Adding a Contact
 
